# system-trading-starterkit

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: strategy-builder.md
.claude/commands/: create-strategy.md
.claude/hooks/: protect_env.py  telegram_notify.py
trading_bot/: __init__.py  main.py
trading_bot/api/: kiwoom_client.py  models.py  rate_limiter.py
trading_bot/config/: settings.py
trading_bot/db/: __init__.py  connection.py  repositories.py  schema.py
trading_bot/execution/: __init__.py  order_manager.py  position_tracker.py  risk_manager.py
trading_bot/notification/: telegram_notifier.py
trading_bot/scheduler/: __init__.py  scheduler.py
trading_bot/strategy/: __init__.py  base.py  golden_cross_of_moving_average_strategy.py  rsi_strategy.py
trading_bot/utils/: exceptions.py  logger.py
